[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtvortex-swarm"
version = "0.1.0"
description = "RTVortex Agent Swarm — AI coding agents for automated development tasks"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

# Explicitly excluded — see docs/swam-agent-plan.md Part 5:
#   anthropic       — tool_runner() calls Anthropic API directly
#   litellm         — holds API keys in Python
#   openai          — forces OpenAI provider
#   claude_agent_sdk — wraps CLI subprocesses

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
