[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipr-sdk"
version = "0.1.0"
description = "Python SDK for AI-PR-Reviewer API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Auralith AI", email = "team@auralith.ai" }
]
keywords = ["ai", "code-review", "pull-request", "devops", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.26.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/auralith/ai-pr-reviewer"
Documentation = "https://github.com/auralith/ai-pr-reviewer/tree/main/sdks/python"
Repository = "https://github.com/auralith/ai-pr-reviewer"
Issues = "https://github.com/auralith/ai-pr-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aipr_sdk"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
